feat(java/zad06): done